# sdk

./: .gitignore  .mega-linter.yml  .pylintrc  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-and-push.yml  ci.yml  generate-models-on-pr.yml  megalinter.yml
docs/: alpaca-model-types.md  alpaca-stock-historical.md  alpaca-stock-requests.md  real-time-stock-pricing-data.md
schemas/kafka/market_stock_quote/: key.avsc  value.avsc
schemas/kafka/market_stock_trade/: key.avsc  value.avsc
schemas/kafka/raw-signal/: value.avsc
schemas/kafka/raw_signal/: key.avsc
src/cz/trading/model/kafka/market_stock_quote/: __init__.py  key.py  value.py
src/cz/trading/model/kafka/raw_signal/: key.py
tests/: __init__.py  test_models.py
tradingcz/: __init__.py
tradingcz/config/: __init__.py  settings.py
tradingcz/io/: __init__.py  kafka.py  kafka_reader.py  kafka_writer.py  reader.py  writer.py
tradingcz/logging/: __init__.py  setup.py
tradingcz/model/: __init__.py  kafka_key.py
tradingcz/model/domain/: __init__.py  bar.py  quote.py  snapshot.py  trade.py
tradingcz/model/dto/: __init__.py  bar.py  quote.py  snapshot.py  trade.py
tradingcz/model/encoder/: __init__.py  mixins.py
tradingcz/model/enum/: __init__.py  adjustment.py  order.py  timeframe.py
tradingcz/model/enums/: __init__.py  adjustment.py  order.py  timeframe.py
tradingcz/model/executor/: __init__.py  limit_order.py  market_order.py
tradingcz/model/ingestion/: __init__.py  bar.py  quote.py  snapshot.py  trade.py
tradingcz/model/kafka/: __init__.py
tradingcz/model/kafka/market_stock_quote/: __init__.py
tradingcz/model/kafka/market_stock_trade/: __init__.py  key.py  value.py
tradingcz/model/kafka/raw_signal/: __init__.py  value.py
tradingcz/model/response/: __init__.py  bar.py  kafka_keys.py  quote.py  snapshot.py  trade.py
tradingcz/model/serde/: __init__.py  csv.py  json.py
tradingcz/model/utils/: __init__.py  converters.py
