[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-sdk"
version = "0.0.7"
description = "Shared SDK and data models for the trading platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "trading-cz", email = "trading@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tradingcz"]

[tool.hatch.build.targets.sdist]
include = [
    "/tradingcz",
    "README.md",
]

