[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-sdk"
version = "0.0.8"
description = "Shared SDK and data models for the trading platform (namespace: tradingcz.model)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "trading-cz", email = "trading@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "confluent-kafka~=2.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tradingcz"]
packages = ["tradingcz/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "/tradingcz",
    "README.md",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["tradingcz"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
# Align with pylint disables: C0301 (line-too-long), C0116 (docstrings handled elsewhere)
ignore = [
    "E501",  # line too long (equivalent to pylint C0301)
]

[tool.ruff.lint.isort]
known-first-party = ["tradingcz"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = [
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long
]
